# excubia_video_player

./: .gitignore  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dropbox.rs  lib.rs  main.rs
src/components/: AuthGate.tsx  Browser.test.tsx  Browser.tsx  NowPlaying.tsx  PlaylistSidebar.tsx  Sidebar.tsx  Skeleton.tsx  ToastContainer.tsx  TrackSelector.tsx
src/contexts/: ToastContext.tsx
src/lib/: dropbox.ts
src/services/: playlist.service.ts
