[package]
name = "excubia-player"
version = "0.1.0"
description = "A Dropbox video player powered by mpv"
authors = ["you"]
edition = "2021"

[lib]
name = "excubia_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
